--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -198,7 +198,7 @@ services:
       - APPLICATION_HOST
       - APPLICATION_PROTOCOL
       - KEYCLOAK_REALM
-      - KEYCLOAK_CLIENT_ID
+      - KEYCLOAK_WEB_CLIENT_ID
       - KEYCLOAK_CLIENT_SECRET
     volumes:
       - ./src/main/resources/legacy-bridge/application.yml:/application.yml
