add ipng conf for core-dev and nginx-prod

--- a/src/main/resources/core/application-dev.yml
+++ b/src/main/resources/core/application-dev.yml
@@ -18,6 +18,10 @@
 
 services:
   stats.provider: none
+  ipng:
+    provider: ipng
+    bindings.provider: db
+    host: ipng-business
 
 spring:
   mail:
