--- a/src/main/resources/nginx/iparapheur.conf.template
+++ b/src/main/resources/nginx/iparapheur.conf.template
@@ -107,6 +107,12 @@ server {
       proxy_pass http://pes-viewer:8888/bl-xemwebviewer;
   }
 
+  location /ipng {
+    proxy_set_header X-Forwarded-Host $host:$server_port;
+    proxy_set_header X-Forwarded-Server $host;
+    proxy_pass http://ipng-business:8081/ipng;
+  }
+
   location /filetransfer/ {
     resolver 127.0.0.11 valid=30s;
     set $upstream_filetransfer filetransfer;
