--- a/src/main/resources/nginx/iparapheur.conf.template
+++ b/src/main/resources/nginx/iparapheur.conf.template
@@ -37,6 +37,10 @@ server {
     proxy_pass http://keycloak:8080/auth;
   }
 
+  location /api/v1/query {
+    proxy_pass http://prometheus:8080/api/v1/query;
+  }
+
   location /api {
     proxy_pass http://core:8080/api;
   }
