--- a/src/main/resources/nginx/iparapheur.develop.conf.template
+++ b/src/main/resources/nginx/iparapheur.develop.conf.template
@@ -26,13 +26,16 @@ server {
 
   proxy_set_header Host $host;
   proxy_set_header X-Real-IP $remote_addr;
-  proxy_set_header X-Forwarded-Proto $scheme;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_http_version 1.1;
 
 
   location /auth {
     proxy_pass http://host.docker.internal:9090/auth;
+  }
+
+  location /api/v1/query {
+    proxy_pass http://host.docker.internal:9091/api/v1/query;
   }
 
   location /api {
