--- a/src/main/resources/prometheus/prometheus.yml
+++ b/src/main/resources/prometheus/prometheus.yml
@@ -15,3 +15,8 @@ scrape_configs:
     static_configs:
       - targets: [ 'crypto:8080' ]
 
+  - job_name: 'local'
+    scrape_interval: 5s
+    metrics_path: '/metrics'
+    static_configs:
+      - targets: [ '${PROMETHEUS_LOCAL_JOB_URL}:8080' ]
