--- a/src/main/resources/prometheus/prometheus.yml
+++ b/src/main/resources/prometheus/prometheus.yml
@@ -15,8 +15,14 @@ scrape_configs:
     static_configs:
       - targets: [ 'crypto:8080' ]
 
+  - job_name: 'pdf-stamp'
+    scrape_interval: 5s
+    metrics_path: '/pdf-stamp/actuator/prometheus'
+    static_configs:
+      - targets: [ 'pdf-stamp:8080' ]
+
   - job_name: 'local'
     scrape_interval: 5s
     metrics_path: '/metrics'
     static_configs:
-      - targets: [ '${PROMETHEUS_LOCAL_JOB_URL}:8080' ]
+      - targets: [ "host.docker.internal:8080" ]
