--- a/src/main/resources/nginx/iparapheur.develop.conf.template
+++ b/src/main/resources/nginx/iparapheur.develop.conf.template
@@ -34,7 +34,7 @@ server {
     proxy_pass http://host.docker.internal:9090/auth;
   }
 
-  location /api/v1/query {
+  location /api/v[0-9]+/query {
     proxy_pass http://host.docker.internal:9091/api/v1/query;
   }
 
