--- a/src/main/resources/legacy-bridge/application.yml
+++ b/src/main/resources/legacy-bridge/application.yml
@@ -20,7 +20,7 @@ service:
   auth:
     host: ${KEYCLOAK_HOST}
     port: ${KEYCLOAK_PORT}
-    login: rest-admin
+    login: soapui
     password: admin
     ticket-delay: 60000
   parapheur:
