--- a/.env.dist
+++ b/.env.dist
@@ -59,3 +59,5 @@ MATOMO_DB_ROOT_PASSWORD=libriciel2k18
 MATOMO_DB_DATABASE=matomo
 MATOMO_DB_USER=matomo
 MATOMO_DB_PASSWORD=matomo
+
+RGPD_DATA=./src/main/resources/rgpd/rgpd.json
