enable default swagger conf in dev mode

--- a/src/main/resources/core/application-dev.yml
+++ b/src/main/resources/core/application-dev.yml
@@ -25,3 +25,5 @@ spring:
     port: 25
 
 server.error.include-message: always
+swagger.oauth2.client-id: ipcore-web
+springfox.documentation.enabled: true
