Correction et mise à jour des tests passants sur ip-core.

--- a/src/main/resources/core/application-dev.yml
+++ b/src/main/resources/core/application-dev.yml
@@ -27,3 +27,4 @@ spring:
 server.error.include-message: always
 swagger.oauth2.client-id: ipcore-web
 springfox.documentation.enabled: true
+spring.jpa.hibernate.ddl-auto: update
