Fix property name for core/ipng

--- a/src/main/resources/core/application-dev.yml
+++ b/src/main/resources/core/application-dev.yml
@@ -20,7 +20,7 @@ services:
   stats.provider: none
   ipng:
     provider: ipng
-    bindings.provider: db
+    bindings-provider: db
     host: ipng-business
 
 spring:
