--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,8 +62,7 @@ services:
 
 
   core:
-    # FIXME : setup a proper tag on the public repository
-    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-core:0.3
+    image: registry.libriciel.fr:443/public/signature/ip-core:0.4
     restart: unless-stopped
     tty: true
     mem_limit: 1024M
@@ -106,8 +105,7 @@ services:
 
 
   web:
-    # FIXME : setup a proper tag on the public repository
-    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-web:0.1
+    image: registry.libriciel.fr:443/public/signature/ip-core:0.4.0
     restart: unless-stopped
     tty: true
     mem_limit: 64M
@@ -119,8 +117,9 @@ services:
     volumes:
       - ${RGPD_DATA}:/usr/share/nginx/html/assets/rgpd.json
 
+
   workflow:
-    image: registry.libriciel.fr/public/signature/workflow:1.0.0
+    image: registry.libriciel.fr/public/signature/workflow:1.0.1
     restart: unless-stopped
     tty: true
     mem_limit: 768M
@@ -184,8 +183,7 @@ services:
 
 
   legacy-bridge:
-    # FIXME : setup a proper tag on the public repository
-    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/legacy-bridge:develop
+    image: registry.libriciel.fr/public/signature/legacy-bridge:1.0.0
     restart: unless-stopped
     tty: true
     mem_limit: 512M
