--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -197,6 +197,7 @@ services:
       - APPLICATION_HOST
       - APPLICATION_PROTOCOL
       - KEYCLOAK_REALM
+      - KEYCLOAK_CLIENT_ID
       - KEYCLOAK_WEB_CLIENT_ID
       - KEYCLOAK_CLIENT_SECRET
     volumes:
