--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,13 +27,12 @@ stages:
 # <editor-fold desc="Test">
 
 
-pull:
-  stage: test
-  # FIXME
-  allow_failure: true
-  script:
-    - cp .env.dist .env
-    - docker-compose pull --quiet
+# FIXME : That would be nice to perform the pull, to check the images existences, at least
+# pull:
+#  stage: test
+#  script:
+#    - cp .env.dist .env
+#    - docker-compose build .
 
 
 # </editor-fold desc="Test">
@@ -42,36 +41,51 @@ pull:
 # <editor-fold desc="Package">
 
 
-zip:
+.packaging: &packaging
+  name: "$CI_PROJECT_NAME-$CI_COMMIT_REF_NAME"
+  paths:
+    - docker-compose.yml
+    - docker-compose.ipng.yml
+    - .env.dist
+    - LICENSE.md
+    - README.md
+    # Resources
+    - ./src/main/resources/nginx/iparapheur.conf.template
+    - ./src/main/resources/content/ip-custom-models.xml
+    - ./src/main/resources/content/custom-model-context.xml
+    - ./src/main/resources/postgres/docker-entrypoint-initdb.d/*
+    - ./src/main/resources/keycloak/startup-scripts
+    - ./src/main/resources/keycloak/keycloak.json
+    - ./src/main/resources/keycloak/themes/libriciel
+    - ./src/main/resources/keycloak/themes/iparapheur
+    - ./src/main/resources/keycloak/docker-entrypoint.sh
+    - ./src/main/resources/prometheus/alert.rules
+    - ./src/main/resources/prometheus/prometheus.yml
+    - ./src/main/resources/rgpd/rgpd-template.json
+    - ./src/main/resources/vault/config/vault.json
+    - ./src/main/resources/vault/policies/app-policy.hcl
+    # TODO : Add some proper doc (PDF?)
+
+
+zip_prod:
   stage: package
+  only:
+    - tags
   script:
     - echo "Packaging things..."
   artifacts:
-    # TODO : Keep the artifact on tags
+    <<: *packaging
+
+
+zip:
+  stage: package
+  except:
+    - tags
+  script:
+    - echo "Packaging things..."
+  artifacts:
+    <<: *packaging
     expire_in: 30 days
-    name: "$CI_PROJECT_NAME-$CI_COMMIT_REF_NAME"
-    paths:
-      - docker-compose.yml
-      - docker-compose.ipng.yml
-      - .env.dist
-      - LICENSE.md
-      - README.md
-      # Resources
-      - ./src/main/resources/nginx/iparapheur.conf.template
-      - ./src/main/resources/content/ip-custom-models.xml
-      - ./src/main/resources/content/custom-model-context.xml
-      - ./src/main/resources/postgres/docker-entrypoint-initdb.d/*
-      - ./src/main/resources/keycloak/startup-scripts
-      - ./src/main/resources/keycloak/keycloak.json
-      - ./src/main/resources/keycloak/themes/libriciel
-      - ./src/main/resources/keycloak/themes/iparapheur
-      - ./src/main/resources/keycloak/docker-entrypoint.sh
-      - ./src/main/resources/prometheus/alert.rules
-      - ./src/main/resources/prometheus/prometheus.yml
-      - ./src/main/resources/rgpd/rgpd-template.json
-      - ./src/main/resources/vault/config/vault.json
-      - ./src/main/resources/vault/policies/app-policy.hcl
-      # TODO : Add some proper doc (PDF?)
 
 
 # </editor-fold desc="Package">
