add version override for dev modes

--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -47,6 +47,8 @@ services:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-web:develop
     mem_limit: 64m
     memswap_limit: 64m
+    environment:
+      - VERSION=5.0.0-beta01-DEV
     ports:
       - "4200:80"
 
