--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -45,6 +45,8 @@ services:
   web:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-web:develop
     entrypoint: [ "echo", "Service disabled" ]
+    environment:
+      - VERSION=5.0.0-beta01-DEV
     ports:
       - "4200:80"
 
