Ajout de la variable d'environnement manquante KEYCLOAK_WEB_CLIENT_ID

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,7 @@ services:
       - KEYCLOAK_REALM
       - KEYCLOAK_CLIENT_ID
       - KEYCLOAK_CLIENT_SECRET
+      - KEYCLOAK_WEB_CLIENT_ID
       - WORKFLOW_HOST
       - WORKFLOW_PORT
       - SECRET_PROTOCOL
