--- a/src/main/resources/external-signature-connector/application.yml
+++ b/src/main/resources/external-signature-connector/application.yml
@@ -16,11 +16,16 @@
 # along with this program. If not, see <http://www.gnu.org/licenses/>.
 #
 
-# Redis configuration"
-spring.redis.host=redis
-spring.redis.port=6379
-connector.redis.parapheurChannel=i_Parapheur_internal_external_signature_connector_notification_queue
+spring:
+  redis:
+    host: redis
+    port: 6379
+  servlet.multipart:
+    max-file-size: 5MB
+    max-request-size: 5MB
 
-# File upload  configuration
-spring.servlet.multipart.max-file-size = 5MB
-spring.servlet.multipart.max-request-size = 5MB
+management.endpoints.web.exposure.include: prometheus
+
+sentry:
+  dsn: SENTRY_URL_WITH_DSN
+  in-app-includes: coop.libriciel.externalsignatureconnector
