Update internal images

--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -59,8 +59,10 @@ services:
 
   workflow:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/workflow:develop
+    environment:
+      - JAVA_OPTS=-Dspring.profiles.active=dev
     ports:
-      - "10080:8080"
+      - "10080:10080"
 
 
   pastell-connector:
