--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -107,20 +107,10 @@ services:
       - "8889:8080"
 
   feeder:
-    image: registry.libriciel.fr/public/signature/feeder:CI-public-upload
-    extra_hosts:
-      - "${APPLICATION_HOST}:host-gateway"
-    environment:
-      - APPLICATION_HOST
-      - APPLICATION_PROTOCOL
-      - parapheur_url=${APPLICATION_PROTOCOL}://${APPLICATION_HOST}/ws-iparapheur
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-feeder:develop
     ports:
       - 8003:8003
 
-    volumes:
-      - ./data/feeder/data:/opt/iParapheur-feeder
-      - /tmp:/tmp
-      - ./src/main/resources/feeder/application.properties:/config/application.properties
 
   # Non-libriciel services
 
