--- a/src/main/resources/nginx/iparapheur.conf.template
+++ b/src/main/resources/nginx/iparapheur.conf.template
@@ -115,6 +115,17 @@ server {
     proxy_pass http://filetransfer:8080/;
   }
 
+  location /feeder/ {
+      proxy_pass http://feeder:8003/;
+  }
+
+  location /feeder/socket {
+      proxy_pass http://feeder:8003/socket;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+  }
+
   # location /libersign {
   #   proxy_pass http://libersign/;
   # }
