Activation optimisation feeder pour legacy-bridge ipv5

--- a/src/main/resources/feeder/application.properties
+++ b/src/main/resources/feeder/application.properties
@@ -1,2 +1,3 @@
 # ipfeeder.targetParapheurUrl=http://iparapheur.dom.local/ws-iparapheur
 logging.level.coop.libriciel=DEBUG
+ipfeeder.usingBridgeToV5=true
