--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -104,6 +104,11 @@ services:
       - "9009:8080"
 
 
+  transform-core-aio:
+    ports:
+      - "8090:8090"
+
+
   postgres:
     ports:
       - "5432:5432"
