--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -48,7 +48,7 @@ services:
     mem_limit: 64m
     memswap_limit: 64m
     environment:
-      - VERSION=5.0.0-beta02-DEV
+      - VERSION=5.0.0-develop
     ports:
       - "4200:80"
 
