Force dev mode for Workflow

--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -59,6 +59,8 @@ services:
 
   workflow:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/workflow:develop
+    mem_limit: 1G
+    memswap_limit: 1G
     environment:
       - JAVA_OPTS=-Dspring.profiles.active=dev
     ports:
