--- a/src/main/resources/core/application-dev.yml
+++ b/src/main/resources/core/application-dev.yml
@@ -1,6 +1,6 @@
 #
-# i-Parapheur
-# Copyright (C) 2019-2022 Libriciel-SCOP
+# i-Parapheur Core
+# Copyright (C) 2018-2022 Libriciel-SCOP
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU Affero General Public License as
@@ -24,13 +24,6 @@ server:
 
 services:
   stats.provider: none
-  ipng:
-    provider: ipng
-    bindings-provider: db
-    host: ipng-business
-    # Force reference url to iparapheur.dom.local for downloads
-    local-mode: true
-    
   # Local services that are not mapped to an environment variable
   pesviewer.host: iparapheur.dom.local
   monitoring.host: iparapheur.dom.local
@@ -50,20 +43,18 @@ services:
   securemail:
     host: iparapheur.dom.local
     port: 8002
-
+  # Force reference url to iparapheur.dom.local for downloads
+  ipng.local-mode: true
 
 logging.level.coop.libriciel: debug
-
-spring:
-  liquibase.enabled: false
-  jpa.hibernate.ddl-auto: update
 
 springdoc:
   api-docs.enabled: true
   swagger-ui.oauth.clientId: ipcore-web
 
-ipng:
-#  lastRedisMessage: 1638444072643-0
-  tenantToEntities:
-    1c6996ed-3cee-4ea3-bb77-afbc0f22bc44: montpellierEntityId
-    2dea654b-beee-4745-bb21-5813e25bda1f: libricielEntityId
+# Dev mode, we'll go for the automatic update
+spring:
+  liquibase.enabled: false
+  jpa.hibernate.ddl-auto: update
+
+sentry.dsn: ""
