Use dedicated dev-container profile for core in dev mode

--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -37,6 +37,8 @@ services:
       - "${APPLICATION_HOST}:host-gateway"
     volumes:
       - ./src/main/resources/core/application-dev.yml:/application.yml
+    environment:
+      - JAVA_OPTS=-Dspring.profiles.active=dev-container
     mem_limit: 1G
     memswap_limit: 1G
     ports:
