--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
 
 
   nginx:
-    image: nginx:1.21.6-alpine
+    image: nginx:1.21.6
     restart: unless-stopped
     tty: true
     mem_limit: 64M
@@ -205,7 +205,7 @@ services:
 
 
   alfresco:
-    image: alfresco/alfresco-content-repository-community:7.1.0
+    image: alfresco/alfresco-content-repository-community:7.1.1.2
     restart: unless-stopped
     tty: true
     mem_limit: 1536M
@@ -254,7 +254,7 @@ services:
 
 
   transform-core-aio:
-    image: alfresco/alfresco-transform-core-aio:2.5.3
+    image: alfresco/alfresco-transform-core-aio:2.5.7
     restart: unless-stopped
     tty: true
     mem_limit: 512M
