--- a/src/main/resources/ipng/application-dev.properties
+++ b/src/main/resources/ipng/application-dev.properties
@@ -1,17 +1,19 @@
 server.servlet.context-path: /ipng
 
 keycloak.realm=api
-keycloak.resource=ipcore-web
-keycloak.credentials.secret=5b0ad04b-eee1-4636-a167-1670e550e870
+keycloak.resource=${KEYCLOAK_CLIENT_ID}
+keycloak.credentials.secret=${KEYCLOAK_CLIENT_SECRET}
 
 keycloak-admin-client.client-id=ipcore-web
-ipng.public-auth-server-url=https://iparapheur.dom.local/auth
-keycloak.auth-server-url=http://keycloak:8080/auth
+ipng.public-auth-server-url=${APPLICATION_PROTOCOL}://${APPLICATION_HOST}/auth
+keycloak.auth-server-url=${KEYCLOAK_AUTH_PROTOCOL}://${KEYCLOAK_HOST}:${KEYCLOAK_PORT}/auth
 keycloak.disable-trust-manager=true
 
 
 swagger.oauth2.client-id=ipcore-web
 
 
-blockchain-access.ca-pem-file=crypto-config/ca/ca.org1.ipng.libriciel.fr-cert.pem
+blockchain-access.ca-name=ca.${IPNG_HOST}
+blockchain-access.ca-url=https://ca.${IPNG_HOST}:443
+blockchain-access.ca-pem-file=crypto-config/ca/ca.${IPNG_HOST}-cert.pem
 blockchain-access.connection-profile-file=connection-profile.yml
