--- a/src/main/resources/nginx/iparapheur.conf.template
+++ b/src/main/resources/nginx/iparapheur.conf.template
@@ -136,11 +136,11 @@ server {
       proxy_pass http://up_pes_viewer/bl-xemwebviewer;
   }
 
-#  location /ipng {
-#    proxy_set_header X-Forwarded-Host $host:$server_port;
-#    proxy_set_header X-Forwarded-Server $host;
-#    proxy_pass http://ipng-business:8081/ipng;
-#  }
+ location /ipng {
+   proxy_set_header X-Forwarded-Host $host:$server_port;
+   proxy_set_header X-Forwarded-Server $host;
+   proxy_pass http://ipng-business:8081/ipng;
+ }
 
   location /filetransfer/ {
     proxy_pass http://up_filetransfer/;
